pamc/src/tests/sample_code/should_fail/multi_file/bind/locally_leaky_use_single_nested/src/mod.ph
mod foo;
use foo.Foo;

let foo_identity = fun _(x: Foo): Foo {
    x
};
